Implement Zero-Shot and Implement bulding blocks of Contrastive learning

--- a/MultiAspect_VisionLanguage_Model.ipynb
+++ b/MultiAspect_VisionLanguage_Model.ipynb
@@ -22,7 +22,7 @@
       "metadata": {
         "id": "EubSJMlnuxBy"
       },
-      "execution_count": 155,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -40,7 +40,7 @@
       "metadata": {
         "id": "RMTETBeUx6QP"
       },
-      "execution_count": 156,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -50,45 +50,18 @@
         "device"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "24eWYZxGkcyq",
-        "outputId": "a2a93406-8065-4fcb-aa40-90fe8390befb"
+        "id": "24eWYZxGkcyq"
       },
-      "execution_count": 157,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "device(type='cpu')"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 157
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 158,
+      "execution_count": null,
       "metadata": {
-        "id": "b78K44szm6sw",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "7ac27fb0-1a19-440c-a44a-f312e6c727b6"
+        "id": "b78K44szm6sw"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
@@ -102,7 +75,7 @@
       "metadata": {
         "id": "R75cTe-Edo_7"
       },
-      "execution_count": 159,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -114,7 +87,7 @@
       "metadata": {
         "id": "vqlzf-FNyLAY"
       },
-      "execution_count": 160,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -126,7 +99,7 @@
       "metadata": {
         "id": "MufLagBD0bae"
       },
-      "execution_count": 161,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -137,7 +110,7 @@
       "metadata": {
         "id": "FYMz050WfyS1"
       },
-      "execution_count": 162,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -146,31 +119,10 @@
         "disease_columns"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "UGMFnq3mf-ib",
-        "outputId": "fb4715fd-dec8-4377-f3bc-ac47c76ca8bb"
+        "id": "UGMFnq3mf-ib"
       },
-      "execution_count": 163,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "['Atelectasis',\n",
-              " 'Cardiomegaly',\n",
-              " 'Consolidation',\n",
-              " 'Edema',\n",
-              " 'Pleural Effusion',\n",
-              " 'Pneumonia',\n",
-              " 'Pneumothorax']"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 163
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -178,27 +130,10 @@
         "print(df.columns)\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "xZU--edUdvPr",
-        "outputId": "0eca4bd0-eef7-4e6f-8a79-1476b1613eb5"
+        "id": "xZU--edUdvPr"
       },
-      "execution_count": 164,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Index(['Path', 'Sex', 'Age', 'Frontal/Lateral', 'AP/PA', 'No Finding',\n",
-            "       'Enlarged Cardiomediastinum', 'Cardiomegaly', 'Lung Opacity',\n",
-            "       'Lung Lesion', 'Edema', 'Consolidation', 'Pneumonia', 'Atelectasis',\n",
-            "       'Pneumothorax', 'Pleural Effusion', 'Pleural Other', 'Fracture',\n",
-            "       'Support Devices'],\n",
-            "      dtype='object')\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -218,7 +153,7 @@
       "metadata": {
         "id": "VN_wzxEpgy50"
       },
-      "execution_count": 165,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -227,7 +162,7 @@
       "metadata": {
         "id": "_Gy-3ZL3jGYG"
       },
-      "execution_count": 165,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -254,7 +189,7 @@
       "metadata": {
         "id": "higyoo6ujAID"
       },
-      "execution_count": 166,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -263,7 +198,7 @@
       "metadata": {
         "id": "uOs-5qljhD4i"
       },
-      "execution_count": 166,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -274,7 +209,7 @@
       "metadata": {
         "id": "GoVbWlhOiIhZ"
       },
-      "execution_count": 167,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -285,7 +220,7 @@
       "metadata": {
         "id": "_Ac_2v9siu9m"
       },
-      "execution_count": 168,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -296,7 +231,7 @@
       "metadata": {
         "id": "DOI6778yh_63"
       },
-      "execution_count": 169,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -305,31 +240,10 @@
         "labels"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "dVSSawZ1jch7",
-        "outputId": "f3d24985-73fc-4855-9b7c-abaa999a5a00"
+        "id": "dVSSawZ1jch7"
       },
-      "execution_count": 170,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "tensor([[0., 1., 0.,  ..., 0., 0., 0.],\n",
-              "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
-              "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
-              "        ...,\n",
-              "        [0., 1., 0.,  ..., 0., 0., 0.],\n",
-              "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
-              "        [1., 0., 0.,  ..., 1., 0., 0.]])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 170
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -337,7 +251,7 @@
       "metadata": {
         "id": "lMkn0L8rjcgf"
       },
-      "execution_count": 170,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -352,7 +266,7 @@
       "metadata": {
         "id": "bSZ6y8iE0__9"
       },
-      "execution_count": 171,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -362,23 +276,10 @@
         "print(text_tensor.size())\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "_dnTzGpa1BPz",
-        "outputId": "e1f7b958-9a82-4954-8e66-68b2bb009f2a"
+        "id": "_dnTzGpa1BPz"
       },
-      "execution_count": 172,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "torch.Size([234, 197, 64])\n",
-            "torch.Size([7, 768])\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -390,7 +291,7 @@
       "metadata": {
         "id": "kEaDlwLmXipC"
       },
-      "execution_count": 173,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -402,7 +303,7 @@
       "metadata": {
         "id": "qiPi9jz6lNvP"
       },
-      "execution_count": 174,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -414,7 +315,7 @@
       "metadata": {
         "id": "EQnxIqSElO8U"
       },
-      "execution_count": 175,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -425,7 +326,7 @@
       "metadata": {
         "id": "euGtaFyXlDMe"
       },
-      "execution_count": 176,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -434,22 +335,10 @@
         "print(image_repr.size())"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "9vs51LZlXlz5",
-        "outputId": "ab21d440-7f37-4c7d-ee99-1a2c81478d66"
+        "id": "9vs51LZlXlz5"
       },
-      "execution_count": 177,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "torch.Size([234, 64])\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -459,7 +348,7 @@
       "metadata": {
         "id": "8PjCMSO-XrW3"
       },
-      "execution_count": 178,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -470,7 +359,7 @@
       "metadata": {
         "id": "oghTa3nbXxVJ"
       },
-      "execution_count": 179,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -482,7 +371,7 @@
       "metadata": {
         "id": "LFIIBDNTX_GZ"
       },
-      "execution_count": 180,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -494,7 +383,7 @@
       "metadata": {
         "id": "G54bZuEDYD1A"
       },
-      "execution_count": 181,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -503,31 +392,10 @@
         "preds"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "7sp5mZ0NYIFJ",
-        "outputId": "f276bbb9-4a99-46d7-fc15-69f1b9de7426"
+        "id": "7sp5mZ0NYIFJ"
       },
-      "execution_count": 182,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "tensor([[0., 0., 0.,  ..., 0., 0., 0.],\n",
-              "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
-              "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
-              "        ...,\n",
-              "        [1., 1., 1.,  ..., 1., 1., 1.],\n",
-              "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
-              "        [0., 1., 1.,  ..., 1., 0., 0.]])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 182
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -536,22 +404,10 @@
         "print(f\"Exact match accuracy: {accuracy.item():.4f}\")\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "n6eAzxsn1Wdm",
-        "outputId": "d8ee864a-fb4b-4741-9119-3e32cd6680f8"
+        "id": "n6eAzxsn1Wdm"
       },
-      "execution_count": 183,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Exact match accuracy: 0.3419\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -560,22 +416,10 @@
         "print(f\"Sample-wise accuracy: {sample_accuracy.item():.4f}\")\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "FJpHkLDFlpOb",
-        "outputId": "1cd74007-6970-4552-cd47-5011c89d4e34"
+        "id": "FJpHkLDFlpOb"
       },
-      "execution_count": 184,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Sample-wise accuracy: 0.7198\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -588,29 +432,10 @@
         "print(f\"Macro (mean per-label) accuracy: {macro_accuracy.item():.4f}\")\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "k81Q9B8alrWF",
-        "outputId": "0aae9ba9-d34e-4276-f6bd-1907ca9eb3a9"
+        "id": "k81Q9B8alrWF"
       },
-      "execution_count": 185,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Atelectasis: 0.6282\n",
-            "Cardiomegaly: 0.7350\n",
-            "Consolidation: 0.7350\n",
-            "Edema: 0.7991\n",
-            "Pleural Effusion: 0.5983\n",
-            "Pneumonia: 0.7821\n",
-            "Pneumothorax: 0.7607\n",
-            "Macro (mean per-label) accuracy: 0.7198\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -633,40 +458,10 @@
         "print(f\" Exact Match Accuracy: {exact_match:.4f}\")"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "_EQYQaV7lv2r",
-        "outputId": "5721f53e-554f-4863-ae2a-7949de4015b7"
+        "id": "_EQYQaV7lv2r"
       },
-      "execution_count": 186,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "🔍 Classification Report (Macro & Per-label):\n",
-            "                  precision    recall  f1-score   support\n",
-            "\n",
-            "     Atelectasis       0.41      0.21      0.28        80\n",
-            "    Cardiomegaly       0.55      0.51      0.53        68\n",
-            "   Consolidation       0.28      0.58      0.38        33\n",
-            "           Edema       0.49      0.73      0.58        45\n",
-            "Pleural Effusion       0.29      0.27      0.28        67\n",
-            "       Pneumonia       0.04      0.25      0.07         8\n",
-            "    Pneumothorax       0.00      0.00      0.00         8\n",
-            "\n",
-            "       micro avg       0.31      0.40      0.35       309\n",
-            "       macro avg       0.29      0.36      0.30       309\n",
-            "    weighted avg       0.39      0.40      0.38       309\n",
-            "     samples avg       0.09      0.22      0.12       309\n",
-            "\n",
-            "\n",
-            " Hamming Loss: 0.2802\n",
-            " Exact Match Accuracy: 0.3419\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -684,22 +479,161 @@
         "print(f\"  threshold: {best_threshold:.2f} با F1: {best_f1:.4f}\")\n"
       ],
       "metadata": {
+        "id": "S9qP2tdevT9z"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "text_tensor.shape"
+      ],
+      "metadata": {
+        "id": "GFBT0UCW14dq",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "S9qP2tdevT9z",
-        "outputId": "00ef30a4-40b4-4edf-8124-107e55743201"
+        "outputId": "72954d85-ff00-405f-cf9b-1ee94b53e926"
       },
-      "execution_count": 187,
+      "execution_count": 63,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "  threshold: 0.50 با F1: 0.3036\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([7, 768])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 63
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "labels.shape"
+      ],
+      "metadata": {
+        "id": "zY3rf0FP2M7l",
+        "outputId": "c41026ef-7773-435e-bbe3-ad425f0be607",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([234, 7])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 64
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "image_proj.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yMYRP-Ya2ckf",
+        "outputId": "d9a4981b-8d16-4938-8247-5d1b709778ee"
+      },
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([234, 768])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 62
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "image_proj = F.normalize(image_proj, dim=1)\n",
+        "text_tensor = F.normalize(text_tensor, dim=1)\n"
+      ],
+      "metadata": {
+        "id": "Rvy5z8_p2yh7"
+      },
+      "execution_count": 66,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "similarity = image_proj @ text_tensor.T\n"
+      ],
+      "metadata": {
+        "id": "waNIMqpp4k59"
+      },
+      "execution_count": 68,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "loss = F.binary_cross_entropy_with_logits(similarity, labels.float())\n"
+      ],
+      "metadata": {
+        "id": "X_8f77wr4q15"
+      },
+      "execution_count": 69,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "optimizer.zero_grad()\n",
+        "loss.backward()\n",
+        "optimizer.step()"
+      ],
+      "metadata": {
+        "id": "FZvx0BQO4rh4"
+      },
+      "execution_count": 70,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# for imgs, labels in dataloader:  # imgs: [B, C, H, W] / labels: [B, num_classes]\n",
+        "#     imgs = imgs.to(device)\n",
+        "#     labels = labels.to(device)\n",
+        "\n",
+        "#     image_proj = image_encoder(imgs)             # [B, D]\n",
+        "#     image_proj = F.normalize(image_proj, dim=1)\n",
+        "\n",
+        "\n",
+        "#     text_proj = F.normalize(text_tensor, dim=1)\n",
+        "\n",
+        "#     similarity = image_proj @ text_proj.T        # [B, num_classes]\n",
+        "#     loss = F.binary_cross_entropy_with_logits(similarity, labels.float())\n",
+        "\n",
+        "#     optimizer.zero_grad()\n",
+        "#     loss.backward()\n",
+        "#     optimizer.step()\n"
+      ],
+      "metadata": {
+        "id": "LiYxAY_447xO"
+      },
+      "execution_count": 71,
+      "outputs": []
     }
   ]
 }
