a Few updates on Feature Embeding and LRF module + fixing a missed module

--- a/MAVL_Phase1_FeatureEmbeding+LRF+baseline.ipynb
+++ b/MAVL_Phase1_FeatureEmbeding+LRF+baseline.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 94,
+      "execution_count": 1,
       "metadata": {
         "id": "OV6K0iGoA0JN"
       },
@@ -19,7 +19,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 95,
+      "execution_count": 2,
       "metadata": {
         "id": "wWmracy0bbA9"
       },
@@ -69,7 +69,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 96,
+      "execution_count": 3,
       "metadata": {
         "id": "c_WtItEF6B7e"
       },
@@ -80,13 +80,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 97,
+      "execution_count": 4,
       "metadata": {
         "id": "oPQr6dsK1bvI",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "342e1a72-1a1e-421b-de44-4a37f1e6a9de"
+        "outputId": "2a903884-9fb7-45d9-bbf3-9964adca8289"
       },
       "outputs": [
         {
@@ -111,7 +111,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 98,
+      "execution_count": 5,
       "metadata": {
         "id": "qDdq3YoesYNw"
       },
@@ -150,7 +150,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 99,
+      "execution_count": 6,
       "metadata": {
         "id": "LCBaZU8QnTRM"
       },
@@ -180,7 +180,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 100,
+      "execution_count": 7,
       "metadata": {
         "id": "y2Qm1_wUHz3v"
       },
@@ -214,7 +214,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 101,
+      "execution_count": 8,
       "metadata": {
         "id": "8TVor3UcKIrX"
       },
@@ -235,7 +235,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 102,
+      "execution_count": 9,
       "metadata": {
         "id": "V2Z68yZrrGHb"
       },
@@ -255,13 +255,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 103,
+      "execution_count": 10,
       "metadata": {
         "id": "xxQUQv1N_5WR",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "695fbaf8-392b-488b-bc51-0e70b19e8352"
+        "outputId": "fd73c26d-9076-4299-89ea-e8c1d762b63e"
       },
       "outputs": [
         {
@@ -282,7 +282,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 104,
+      "execution_count": 11,
       "metadata": {
         "id": "VQ28_a3DgnRE"
       },
@@ -297,20 +297,33 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "df = pd.read_csv(csv_path)\n",
+        "subset_df = df.sample(frac=0.3 , random_state= 42).reset_index(drop=True)\n",
+        "subset_df.to_csv(\"chexpert_30percent.csv\",index = False)"
+      ],
+      "metadata": {
+        "id": "i2kCAJcyABYq"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "hIoVSoefbP0x",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "614791d3-7b5c-4983-e3a9-fe0ed86b6c86"
+        "outputId": "c4f6d16b-98a8-4523-ebee-bfce4609dec8"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "📥 Copying files:  74%|███████▍  | 49862/67024 [02:39<00:50, 340.16it/s]"
+            "📥 Copying files:  13%|█▎        | 8465/67024 [00:23<03:44, 260.41it/s]"
           ]
         }
       ],
