Final version for learning feature embeddings

--- a/MAVL_Phase1_FeatureEmbeding+LRF+baseline.ipynb
+++ b/MAVL_Phase1_FeatureEmbeding+LRF+baseline.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 54,
       "metadata": {
         "id": "OV6K0iGoA0JN"
       },
@@ -19,7 +19,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 55,
       "metadata": {
         "id": "wWmracy0bbA9"
       },
@@ -69,7 +69,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 56,
       "metadata": {
         "id": "c_WtItEF6B7e"
       },
@@ -80,13 +80,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 57,
       "metadata": {
         "id": "oPQr6dsK1bvI",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2a903884-9fb7-45d9-bbf3-9964adca8289"
+        "outputId": "7098ce1c-1f44-4451-defe-627b0fc20d8b"
       },
       "outputs": [
         {
@@ -111,7 +111,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 53,
       "metadata": {
         "id": "qDdq3YoesYNw"
       },
@@ -150,7 +150,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 58,
       "metadata": {
         "id": "LCBaZU8QnTRM"
       },
@@ -180,7 +180,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 59,
       "metadata": {
         "id": "y2Qm1_wUHz3v"
       },
@@ -193,35 +193,41 @@
         "        self.transform = transform\n",
         "        self.label_cols = [\"Atelectasis\", \"Cardiomegaly\", \"Consolidation\", \"Edema\", \"Pleural Effusion\"]\n",
         "\n",
-        "\n",
         "        self.data[self.label_cols] = self.data[self.label_cols].fillna(0).replace(-1, 1)\n",
+        "\n",
+        "\n",
+        "        self.prefix = \"CheXpert-v1.0-small/\"\n",
         "\n",
         "    def __len__(self):\n",
         "        return len(self.data)\n",
         "\n",
         "    def __getitem__(self, idx):\n",
         "        row = self.data.iloc[idx]\n",
-        "        image_path = os.path.join(self.root_dir, row[\"Path\"])\n",
-        "        image = Image.open(image_path).convert(\"RGB\")\n",
+        "        path = row[\"Path\"]\n",
         "\n",
+        "        if path.startswith(self.prefix):\n",
+        "            path = path[len(self.prefix):]\n",
+        "\n",
+        "        image_path = os.path.join(self.root_dir, path)\n",
+        "        image = Image.open(image_path).convert(\"RGB\")\n",
         "        labels = row[self.label_cols].values.astype(np.float32)\n",
         "\n",
         "        if self.transform:\n",
         "            image = self.transform(image)\n",
         "\n",
-        "        return image, torch.tensor(labels)\n"
+        "        return image, path  # 👈 فقط image و path بده (label نمی‌خوای برای embedding)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 60,
       "metadata": {
         "id": "8TVor3UcKIrX"
       },
       "outputs": [],
       "source": [
         "#  Transforms\n",
-        "from torchvision import transforms\n",
+        "\n",
         "\n",
         "train_transform = transforms.Compose([\n",
         "    transforms.RandomRotation(10),\n",
@@ -235,7 +241,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 61,
       "metadata": {
         "id": "V2Z68yZrrGHb"
       },
@@ -255,13 +261,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 62,
       "metadata": {
         "id": "xxQUQv1N_5WR",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fd73c26d-9076-4299-89ea-e8c1d762b63e"
+        "outputId": "554ae3d5-8651-4f78-e31e-dbf8aa5c163d"
       },
       "outputs": [
         {
@@ -282,7 +288,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 63,
       "metadata": {
         "id": "VQ28_a3DgnRE"
       },
@@ -305,31 +311,34 @@
       "metadata": {
         "id": "i2kCAJcyABYq"
       },
-      "execution_count": 13,
+      "execution_count": 64,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 65,
       "metadata": {
         "id": "hIoVSoefbP0x",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c4f6d16b-98a8-4523-ebee-bfce4609dec8"
+        "outputId": "69f71d6e-c85e-4a73-fb58-5691a76182a9"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "📥 Copying files:  13%|█▎        | 8465/67024 [00:23<03:44, 260.41it/s]"
+            "📥 Copying files: 100%|██████████| 67024/67024 [04:00<00:00, 278.83it/s]\n"
           ]
         }
       ],
       "source": [
         "def copy_file(rel_path_str):\n",
-        "    rel_path = Path(rel_path_str.replace(\"CheXpert-v1.0-small/\", \"\"))\n",
+        "    prefix = \"CheXpert-v1.0-small/\"\n",
+        "    if rel_path_str.startswith(prefix):\n",
+        "        rel_path_str = rel_path_str[len(prefix):]\n",
+        "    rel_path = Path(rel_path_str)\n",
         "    src = Path(img_root) / rel_path\n",
         "    dst = target_root / rel_path\n",
         "    try:\n",
@@ -345,18 +354,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 66,
       "metadata": {
-        "id": "tlVbI6rq8EY_"
+        "id": "tlVbI6rq8EY_",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "336f8fef-efcb-4092-abe9-383d1c80db7c"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "train  train.csv  valid  valid.csv\n"
+          ]
+        }
+      ],
       "source": [
-        "!ls /content/drive/MyDrive/chexpert_data_v2/\n"
+        "!ls /content/drive/MyDrive/chexpert_data_v2/"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 67,
       "metadata": {
         "id": "uJZq1u-qfByl"
       },
@@ -377,7 +398,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 68,
       "metadata": {
         "id": "aOVp54Et71b6"
       },
@@ -414,7 +435,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 69,
       "metadata": {
         "id": "cf49KPIUb8Fg"
       },
@@ -475,7 +496,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 70,
       "metadata": {
         "id": "CxGcQWZX9uIQ"
       },
@@ -494,7 +515,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 71,
       "metadata": {
         "id": "_BeDuRCr4XgC"
       },
@@ -547,7 +568,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 72,
       "metadata": {
         "id": "dlgBcM1WYZBD"
       },
@@ -555,29 +576,39 @@
       "source": [
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
         "\n",
-        "train_dataset = CheXpertDataset(\"chexpert_30percent.csv\", \"/content/chexpert_data_v2_selected\", transform)\n",
-        "val_dataset   = CheXpertDataset(\"/content/drive/MyDrive/chexpert_data_v2/valid.csv\", \"/content/drive/MyDrive/chexpert_data_v2\", transform)\n",
+        "train_dataset = CheXpertDataset(\"chexpert_30percent.csv\", \"/content/chexpert_data_v2_selected\", train_transform)\n",
+        "val_dataset   = CheXpertDataset(\"/content/drive/MyDrive/chexpert_data_v2/valid.csv\", \"/content/drive/MyDrive/chexpert_data_v2\", train_transform)\n",
         "\n",
         "train_loader = DataLoader(train_dataset, batch_size=16, shuffle=True, num_workers=2)\n",
         "val_loader   = DataLoader(val_dataset, batch_size=64, shuffle=False)\n",
-        "\n",
-        "model = LRFLModel(backbone_name=\"vit_base_patch16_224\", rank=64, num_classes=5).to(device)\n",
-        "optimizer = optim.AdamW(model.parameters(), lr=2e-5)\n",
         "\n"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "for images, labels in train_loader:\n",
-        "    print(\"Batch labels shape:\", labels.shape)\n",
-        "    print(\"First batch of labels:\", labels[:5])\n",
-        "    break\n"
+        "model = LRFLModel(backbone_name=\"vit_base_patch16_224\", rank=64, num_classes=5).to(device)\n",
+        "optimizer = optim.AdamW(model.parameters(), lr=2e-5)"
+      ],
+      "metadata": {
+        "id": "5fF4OVS7l0s6"
+      },
+      "execution_count": 73,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# for images, labels in train_loader:\n",
+        "#     print(\"Batch labels shape:\", labels.shape)\n",
+        "#     print(\"First batch of labels:\", labels[:5])\n",
+        "#     break\n",
+        "# # # for being more strick -1 labels which were mapped to uncertain condition has been transformed to +1 label."
       ],
       "metadata": {
         "id": "AGfzkxrV7qrR"
       },
-      "execution_count": null,
+      "execution_count": 75,
       "outputs": []
     },
     {
@@ -588,8 +619,8 @@
       },
       "outputs": [],
       "source": [
-        "train(model, train_loader, val_loader, optimizer, device,\n",
-        "      num_epochs=20, rank=32, eta=1e-3, patience=5, checkpoint_path=\"best_lrfl_model.pth\")"
+        "# train(model, train_loader, val_loader, optimizer, device,\n",
+        "#       num_epochs=20, rank=32, eta=1e-3, patience=5, checkpoint_path=\"best_lrfl_model.pth\")"
       ]
     },
     {
@@ -603,26 +634,91 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "# for batch in train_loader:\n",
+        "#     print(len(batch))\n",
+        "#     break"
+      ],
+      "metadata": {
+        "id": "P-OOzMb1yImf"
+      },
+      "execution_count": 77,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 79,
       "metadata": {
         "id": "2xRvGevMgm_Y"
       },
       "outputs": [],
       "source": [
-        "#  Extract image embeddings and save\n",
-        "model.load_state_dict(torch.load(\"/content/drive/MyDrive/best_model_LRF30%v2.pth\"))\n",
+        "# # Extract image embeddings and save\n",
+        "# model.load_state_dict(torch.load(\"/content/drive/MyDrive/best_lrfl_model_v2.pth\"))\n",
+        "# model.eval()\n",
+        "\n",
+        "# image_embeddings = {}\n",
+        "\n",
+        "# with torch.no_grad():\n",
+        "#     for images, paths in tqdm(train_loader):\n",
+        "#         images = images.to(device)\n",
+        "#         embs = model.get_image_embedding(images)  # (B, R)\n",
+        "\n",
+        "#         for path, emb in zip(paths, embs):\n",
+        "#             image_embeddings[path] = emb.cpu()\n",
+        "\n",
+        "# torch.save(image_embeddings, \"/content/drive/MyDrive/image_embeddings_LRF30_v2.pt\")\n",
+        "# print(\" Image embeddings saved!\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "model = LRFLModel(rank=64, num_classes=5)\n",
+        "model.load_state_dict(torch.load(\"/content/drive/MyDrive/best_lrfl_model_v2.pth\"))\n",
+        "model = model.to(device)\n",
         "model.eval()\n",
         "\n",
         "image_embeddings = {}\n",
+        "\n",
         "with torch.no_grad():\n",
-        "    for images, _, paths in tqdm(train_loader):\n",
+        "    for images, paths in tqdm(train_loader):\n",
         "        images = images.to(device)\n",
-        "        embs = model.get_image_embedding(images)  # (B, R)\n",
+        "\n",
+        "        feats = model.forward_features(images)       # [B, embed_dim]\n",
+        "        embs = model.low_rank_proj(feats)            # [B, rank]\n",
+        "\n",
         "        for path, emb in zip(paths, embs):\n",
         "            image_embeddings[path] = emb.cpu()\n",
         "\n",
-        "torch.save(image_embeddings, \"/content/drive/MyDrive/image_embeddings_LRF30%.pt\")\n",
-        "print(\" Image embeddings saved!\")\n"
+        "\n",
+        "torch.save(image_embeddings, \"/content/drive/MyDrive/image_embeddings_LRF30_v2.pt\")\n",
+        "print(\"✅ Image embeddings saved successfully!\")\n"
+      ],
+      "metadata": {
+        "id": "d5YGWRzwzODM",
+        "outputId": "f5710401-eeeb-406d-bbc1-547b7173254e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 80,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 4189/4189 [14:50<00:00,  4.71it/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "✅ Image embeddings saved successfully!\n"
+          ]
+        }
       ]
     },
     {
@@ -655,10 +751,9 @@
     }
   ],
   "metadata": {
-    "accelerator": "GPU",
     "colab": {
-      "gpuType": "T4",
-      "provenance": []
+      "provenance": [],
+      "gpuType": "T4"
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -666,7 +761,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "nbformat": 4,
   "nbformat_minor": 0
